# CPlusPlus-Guide

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/amd64_ubuntu_24.04/: Dockerfile  README.md  devcontainer.json  docker-compose.yaml
.devcontainer/x64_ubuntu24.04/: Dockerfile  README.md  devcontainer.json  docker-compose.yaml
.obsidian/: community-plugins.json  workspace.json
code_examples/: CMakeLists.txt  CMakePresets.json  README.md
code_examples/.devcontainer/: Dockerfile
code_examples/cmake/external_libraries/add-custom-target_jsoncpp_copied-files/: CMakeLists.txt
code_examples/cmake/external_libraries/add-custom-target_jsoncpp_copied-files/scripts/: configure_and_build_project.sh
code_examples/cmake/external_libraries/add-custom-target_jsoncpp_copied-files/src/: main.cpp
code_examples/cmake/external_libraries/build-script_jsoncpp_copied-files/: CMakeLists.txt
code_examples/cmake/external_libraries/build-script_jsoncpp_copied-files/scripts/: build_external.sh
code_examples/cmake/external_libraries/external-add_jsoncpp_git/: CMakeLists.txt
code_examples/cmake/external_libraries/fetch-content_jsoncpp_copied-files/: CMakeLists.txt
code_examples/cmake/external_libraries/fetch-content_jsoncpp_copied-files/scripts/: configure_and_build_project.sh
code_examples/cmake/external_libraries/fetch-content_jsoncpp_copied-files/src/: main.cpp
code_examples/cmake/external_libraries/fetch-content_jsoncpp_git/: CMakeLists.txt
code_examples/concurrency/: CMakeLists.txt  CMakePresets.json  main.cpp
code_examples/concurrency/src/: 01_sync.h  02_async.h  03_async_cout_mutex.h  main.cpp
code_examples/multithreading/: CMakeLists.txt  main  main.cpp
code_examples/multithreading/01_sync/: CMakeLists.txt  main.cpp
code_examples/multithreading/02_async/: CMakeLists.txt  main.cpp
code_examples/multithreading/03_async_cout_mutex/: CMakeLists.txt  main.cpp
guide/: _index.md
guide/.obsidian/: app.json  appearance.json  workspace.json
guide/Containers/: sortspec.md
guide/Containers/Associative containers/: sortspec.md
guide/Containers/Unordered associative containers/: std unordered_multimap.md  std unordered_multiset.md
guide/Error Handling/: sortspec.md
guide/Functions/: Lambdas.md  sortspec.md
guide/Multithreading/: Introduction to concurrency.md  POSIX vs STL Threads.md  sortspec.md
guide/Multithreading/STL Threads/: async and future.md  sortspec.md  thread.md
guide/OOP/: Classes vs structs.md  Friend.md  sortspec.md
guide/OOP/Inheritance/: Order of construction.md
guide/OOP/Virtual functions/: Covariant return types.md  Multiple inheritance.md  sortspec.md
guide/Strings/: C-Style strings.md  String view.md  sortspec.md
guide/Typing/: Using constval.md
guide/Typing/Casting/: sortspec.md
guide/cmake/: compilers.md
guide/cmake_and_tooling/: build_generators.md  compilers.md  tooling.md
guide/cmake_and_tooling/cmake/: generators.md  introduction.md  targets.md  variables.md
guide/cmake_and_tooling/tooling/: abi.md  build_generators.md  compilation_process.md  compilers.md  dependency_management.md  project_setup.md
guide/concurrency/: introduction.md  posix_vs_stl_threads.md
guide/concurrency/stl_threads/: _index.md
guide/containers/: _index.md  std_span.md  views.md
guide/containers/associative/: _index.md  std_map.md  std_multimap.md  std_multiset.md  std_set.md
guide/containers/associative_containers/: _index.md
guide/containers/sequence/: _index.md  c_style_arrays.md  dynamic_allocation.md  iterators.md  loops.md  standard_library_functions.md  std_array.md  std_deque.md  std_list.md
guide/containers/sequence_containers/: iterators.md
guide/containers/unordered_associative/: _index.md
guide/containers/unordered_associative_containers/: std_unordered_map.md
guide/design_patterns/: pimpl.md  raii.md
guide/functions/: _index.md  function_pointers.md  lambdas.md  std_function.md
guide/memory/: pointers.md  references.md  smart_pointers.md
guide/memory_management/: _index.md  pointers.md  references.md  shallow_copy_vs_deep_copy.md  smart_pointers_in_functions.md  using_shared_ptr.md
guide/multithreading/: _index.md
guide/oop/: _index.md  constructors.md  default_delete.md  destructors.md  friend.md  move_and_copy.md  nesting_classes.md  object_relationships.md  rule_of_five.md  static.md
guide/oop/inheritance/: _index.md  introduction.md
guide/oop/operator_overloading/: _index.md  friend_vs_member_vs_normal_function_overloading.md  introduction.md
guide/oop/virtual_functions/: _index.md  introduction.md
guide/project/: _index.md
guide/strings/: _index.md  c_style_strings.md  io_streams.md
guide/tools/clang/: tooling.md
guide/tools/cmake/: best_practices.md  cmakepresets.md
guide/tools/compilation/: compilation_process.md  compilers.md  dependency_management.md
guide/typing/: _index.md
obsidian/: sortspec.md
obsidian/.obsidian/: appearance.json  community-plugins.json  graph.json  workspace.json
obsidian/Containers/: Container adaptors.md  Views.md
obsidian/Functions/: sortspec.md
obsidian/Memory Management/: References.md  Smart Pointers.md  Smart pointers and forward declaration.md  Smart pointers in functions.md  sortspec.md
obsidian/OOP/: Destructors.md  Nesting classes.md
obsidian/Strings/: File streams.md  std format.md  std string.md
obsidian/Typing/: Using constexpr.md  auto.md
(+46 files in other folders)
